[package]
authors = ["winebarrel <sugawara@winebarrel.jp>"]
edition = "2018"
name = "logsf"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dtparse = "1.1"
getopts = "0.2"
regex = "1.3"
rusoto_core = "0.44"
rusoto_logs = "0.44"
tokio = "0.2"

[dev-dependencies]
rusoto_mock = "0.44"
serde = "1.0"
serde_json = "1.0"
